--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,4 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: configure
-      run: gcc *.c -o appl
+      run: gcc -o outputfile/appl *.c
+    - name: Run tests
+      run: ./outputfile/appl
