--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -24,4 +24,4 @@ jobs:
       steps:
       - uses: actions/checkout@v4
       - name: configure
-        run: ./appl
+        run: echo "Hello WOrld!"
