--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,7 +19,8 @@ jobs:
   test:
   
     runs-on: ubuntu-latest
-
+    needs: build
+    
     steps:
     - uses: actions/checkout@v4
     - name: configure
